--- a/MAC/shop/templates/shop/basic.html
+++ b/MAC/shop/templates/shop/basic.html
@@ -19,7 +19,7 @@
 
     <!--  navigation bar code starts here-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Randi Bazar</a>
+        <a class="navbar-brand" href="#">Online shop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
