--- a/MAC/shop/templates/shop/prodview.html
+++ b/MAC/shop/templates/shop/prodview.html
@@ -1,67 +1,40 @@
-{% extends 'shop/basic.html' %}
+{% extends 'base.html' %}
+{% load static %}
 
-{% block title%} {{product.product_name}} - My Awesome Cart{% endblock %}
-{% block body %}
-<div class="container my-4">
-    <div class="row">
-    <div class="col-md-4">
-    <div class="row">
-        <img src="/media/{{product.image}}" width="233px" height="385px">
-    </div>
-        <div class="row">
-            <button class="btn btn-primary mx-3">Buy Now</button>
-            <button class="btn btn-primary">Add To Cart</button>
+{% block title %}{{ product.product_name }} - MAC Shop{% endblock %}
+
+{% block content %}
+<div class="row">
+    <div class="col-md-6">
+        {% if product.image %}
+        <img src="{{ product.image.url }}" alt="{{ product.product_name }}" class="img-fluid">
+        {% else %}
+        <div class="bg-light p-5 text-center">
+            <p>No image available</p>
         </div>
-
+        {% endif %}
     </div>
-
-    <div class="col-md-8">
-        <h5>{{product.product_name}}</h5>
-        <p><b>Rs.{{product.price}} </b></p>
-        <p>{{product.desc}}</p>
-
-
+    
+    <div class="col-md-6">
+        <h1>{{ product.product_name }}</h1>
+        <p class="text-muted">{{ product.category }} / {{ product.subcategory }}</p>
+        <h3 class="text-primary">₹{{ product.price }}</h3>
+        <p>{{ product.desc }}</p>
+        
+        <div class="mb-3">
+            <label for="quantity">Quantity:</label>
+            <input type="number" id="quantity" value="1" min="1" max="10" class="form-control" style="width: 100px; display: inline-block;">
+        </div>
+        
+        <button class="btn btn-primary" onclick="addToCart({{ product.id }}, '{{ product.product_name }}', {{ product.price }})">Add to Cart</button>
+        <button class="btn btn-success" onclick="buyNow()">Buy Now</button>
     </div>
-    </div>
-
-
 </div>
 
-
-
-
-{% endblock %}
-
-
-
-
-{% block js %}
 <script>
-console.log('working');
-if(localStorage.getItem('cart') == null){
-var cart = {};
+function buyNow() {
+    addToCart({{ product.id }}, '{{ product.product_name }}', {{ product.price }});
+    window.location.href = "{% url 'shop:Checkout' %}";
 }
-else
-{
-cart = JSON.parse(localStorage.getItem('cart'));
-document.getElementById('cart').innerHTML = Object.keys(cart).length;
-}
-$('.cart').click(function(){
-console.log('clicked');
-var idstr = this.id.toString();
-console.log(idstr);
-if (cart[idstr] !=undefined){
-cart[idstr] = cart[idstr] + 1;
-}
-else
-{
-cart[idstr] = 1;
-}
-console.log(cart);
-localStorage.setItem('cart', JSON.stringify(cart));
-document.getElementById('cart').innerHTML = Object.keys(cart).length;
-});
-$('#popcart').popover();
-document.getElementById("popcart").setAttribute('data-content', '<h5>Cart for your items in my shopping cart</h5>');
 </script>
 {% endblock %}
