--- a/MAC/shop/templates/shop/tracker.html
+++ b/MAC/shop/templates/shop/tracker.html
@@ -1,85 +1,35 @@
-{% extends 'shop/basic.html' %}
-{% block title%} My Awesome Cart Tracker{% endblock %}
-{% block body %}
-<div class="container">
-    <div class="col my-4">
-        <h2>Enter your Order Id and Email address to track your order</h2>
-        <form method="post" action="#" id="trackerForm">{% csrf_token %}
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="inputname">Order Id</label>
-                    <input type="text" class="form-control" id="orderId" name="orderId" placeholder="Order Id">
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="inputEmail4">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-                </div>
-                <button type="submit" class="btn btn-primary">Track Order</button>
+{% extends 'base.html' %}
+
+{% block title %}Track Order - BuzzAR{% endblock %}
+
+{% block content %}
+<div class="row">
+    <div class="col-md-6">
+        <h2>Track Your Order</h2>
+        <form method="POST">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="orderId" class="form-label">Order ID</label>
+                <input type="text" class="form-control" id="orderId" name="orderId" required>
             </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Track Order</button>
+        </form>
+        
+        <div id="tracking-result" class="mt-4"></div>
     </div>
-    <div class="col my-4">
-        <h2>Your Order Status</h2>
-        <div class="my-4">
-            <ul class="list-group" id="items">
-                Enter your order Id and Email and click Track Order to find details about your order!
-            </ul>
-        </div>
-        <h2>Your Order Details</h2>
-        <div class="my-4">
-            <ul class="list-group" id="citems">
-            </ul>
-        </div>
+    
+    <div class="col-md-6">
+        <h4>Order Tracking Help</h4>
+        <p>Enter your order ID and email address to track your order status.</p>
+        <ul>
+            <li>Order ID can be found in your confirmation email</li>
+            <li>Use the same email address used during checkout</li>
+            <li>Contact support if you need assistance</li>
+        </ul>
     </div>
 </div>
-{% endblock %}
-{% block js %}
-<script>
-$('#trackerForm').submit(function(event) {
-    $('#items').empty();
-    var formData = {
-        'orderId': $('input[name=orderId]').val(),
-        'email': $('input[name=email]').val(),
-        'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val()
-    };
-    $.ajax({
-            type: 'POST',
-            url: '/shop/tracker/',
-            data: formData,
-            encode: true
-        })
-        .done(function(data) {
-            console.log(data)
-            data = JSON.parse(data);
-            updates = data[0];
-            if (updates.length > 0 & updates != {}) {
-                for (i = 0; i < updates.length; i++) {
-                    let text = updates[i]['text'];
-                    let time = updates[i]['time'];
-                    mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
-                    ${text}
-                    <span class="badge badge-primary badge-pill">${time}</span>
-                </li>`
-                    $('#items').append(mystr);
-                }
-            } else {
-                mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
-                    Sorry, We are not able to fetch this order id and email. Make sure to type correct order Id and email</li>`
-                $('#items').append(mystr);
-            }
-            // Fill in the order details
-            cart = JSON.parse(data[1]);
-            console.log(cart);
-            for (item in cart) {
-                let name = cart[item][1];
-                let qty = cart[item][0];
-                mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
-                    ${name}
-                    <span class="badge badge-primary badge-pill">${qty}</span>
-                </li>`
-                $('#citems').append(mystr);
-            }
-        });
-    event.preventDefault();
-});
-</script>
 {% endblock %}
