--- a/MAC/shop/templates/shop/index.html
+++ b/MAC/shop/templates/shop/index.html
@@ -25,8 +25,8 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ product.product_name }}</h5>
                         <p class="card-text">₹{{ product.price }}</p>
-                        <a href="{% url 'shop:ProductView' product.id %}" class="btn btn-primary btn-sm">View</a>
-                        <button class="btn btn-success btn-sm" onclick="addToCart({{ product.id }}, '{{ product.product_name }}', {{ product.price }})">Add to Cart</button>
+                        <a href="{% url 'shop:ProductView' product.product_id %}" class="btn btn-primary btn-sm">View</a>
+                        <button class="btn btn-success btn-sm" onclick="addToCart({{ product.product_id }}, '{{ product.product_name }}', {{ product.price }})">Add to Cart</button>
                     </div>
                 </div>
             </div>
