--- a/MAC/shop/templates/shop/prodview.html
+++ b/MAC/shop/templates/shop/prodview.html
@@ -26,14 +26,14 @@
             <input type="number" id="quantity" value="1" min="1" max="10" class="form-control" style="width: 100px; display: inline-block;">
         </div>
         
-        <button class="btn btn-primary" onclick="addToCart({{ product.id }}, '{{ product.product_name }}', {{ product.price }})">Add to Cart</button>
+        <button class="btn btn-primary" onclick="addToCart({{ product.product_id }}, '{{ product.product_name }}', {{ product.price }})">Add to Cart</button>
         <button class="btn btn-success" onclick="buyNow()">Buy Now</button>
     </div>
 </div>
 
 <script>
 function buyNow() {
-    addToCart({{ product.id }}, '{{ product.product_name }}', {{ product.price }});
+    addToCart({{ product.product_id }}, '{{ product.product_name }}', {{ product.price }});
     window.location.href = "{% url 'shop:Checkout' %}";
 }
 </script>
