--- a/MAC/shop/templates/shop/search.html
+++ b/MAC/shop/templates/shop/search.html
@@ -26,7 +26,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">{{ product.product_name }}</h5>
                                 <p class="card-text">₹{{ product.price }}</p>
-                                <a href="{% url 'shop:ProductView' product.id %}" class="btn btn-primary btn-sm">View</a>
+                                <a href="{% url 'shop:ProductView' product.product_id %}" class="btn btn-primary btn-sm">View</a>
                             </div>
                         </div>
                     </div>
